fix(manager): freeze plugin management contract